--- a/conf/db.properties
+++ b/conf/db.properties
@@ -2,8 +2,8 @@ jdbc.user=root
 jdbc.password=root
 #jdbc.password=qgzx2001
 jdbc.driverClass=com.mysql.jdbc.Driver
-#jdbc.jdbcUrl=jdbc:mysql:///salary
-jdbc.jdbcUrl=jdbc:mysql:///jobs
+jdbc.jdbcUrl=jdbc:mysql:///salary
+#jdbc.jdbcUrl=jdbc:mysql:///jobs
 
 jdbc.initPoolSize=5
 jdbc.maxPoolSize=10
